[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
serde = "1.0.210"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["full"] }
wasmtime = "25.0.1"
wasmtime-wasi = "25.0.1"
